# tiliqua

./: .buildinfo  .gitmodules  README.md  audio_bitstreams.html  beamrace_video.html  bootloader.html  building_flashing.html  calibration.html  community.html  connections.html  cpu_bitstreams.html  custom_dsp.html  dsp.html  foss_funding.html  gettingstarted.html  hardware.html  hardware_changes.html  hardware_design.html  index.html  install.html  objects.inv  py-modindex.html  search.html  searchindex.js  soc.html  technical.html  top.html  usb_troubleshooting.html
gateware/: .gitignore  Cargo.toml  compare.py  controller.diff  embedded-graphics.diff  flash_core.py  flash_tiliqua.py  index.html  notes.txt  pyproject.toml  vex_big.sh  vex_cmd.sh
gateware/docs/: audio_bitstreams.rst  beamrace_video.rst  bootloader.rst  building_flashing.rst  calibration.rst  community.rst  conf.py  cpu_bitstreams.rst  custom_dsp.rst  gettingstarted.rst  hardware_changes.rst  hardware_design.rst  index.rst  install.rst  usb_troubleshooting.rst
gateware/docs/blog/: index.rst  march_2025.rst
gateware/docs/devlog/: march25.rst
gateware/docs/dsp/: block.rst  complex.rst  cordic.rst  delay_effect.rst  delay_lines.rst  effects.rst  fft.rst  filters.rst  index.rst  mac.rst  oneshot.rst  oscillators.rst  spectral.rst  stream_util.rst  types.rst  vca.rst
gateware/docs/examples/: no_soc_examples.rst  soc_examples.rst
gateware/docs/gettingstarted/: building_flashing.rst  index.rst  simulation.rst
gateware/docs/quickstart/: tlq_module.rst
gateware/scripts/: Dockerfile  bootstrap.sh  bootstubs.sh  build_all.sh  build_bitstreams_no_soc.sh  build_bitstreams_soc.sh  docker.sh  speed_test.py  usage.py
gateware/src/amaranth_future/: fixed.py
gateware/src/rs/: handlers.rs
gateware/src/rs/bootinfo_gen/: Cargo.toml
gateware/src/rs/bootinfo_gen/src/: main.rs
gateware/src/rs/hal/: Cargo.toml
gateware/src/rs/hal/src/: cy8cmbr31xx.rs  cy8cmbr3xxx.rs  delay_line.rs  dma_display.rs  dma_framebuffer.rs  dummy.rs  eeprom.rs  encoder.rs  grain_player.rs  i2c.rs  lib.rs  pca9635.rs  persist.rs  pmod.rs  polysynth.rs  serial.rs  si5351.rs  spiflash.rs  timer.rs  tusb322.rs  video.rs
gateware/src/rs/lib/: Cargo.toml
gateware/src/rs/lib/src/: bootinfo.rs  calibration.rs  color.rs  draw.rs  dsp.rs  edid.rs  eeprominfo.rs  leds.rs  lib.rs  manifest.rs  mono_6x12_optimized.rs  opt.rs  palette.rs  prelude.rs  ui.rs
gateware/src/rs/lib/src/raw/: mono_6x12_optimized.data
gateware/src/rs/manifest/: Cargo.toml
gateware/src/rs/manifest/src/: lib.py  lib.rs
gateware/src/rs/opts/: Cargo.toml
gateware/src/rs/opts-macro/: Cargo.toml
gateware/src/rs/opts-macro/src/: lib.rs
gateware/src/rs/opts/src/: button.rs  enumeration.rs  float.rs  integer.rs  lib.rs  persistence.rs  string.rs  traits.rs
gateware/src/rs/opts/tests/: test_target.rs
gateware/src/rs/opts_derive/: Cargo.toml
gateware/src/rs/opts_derive/src/: lib.rs
gateware/src/rs/template/pac/: Cargo.toml
gateware/src/rs/template/pac/src/: lib.rs
gateware/src/tb_cpp/: dvi.h  i2s.h  psram.h  sim_soc.cpp
gateware/src/tiliqua/: archive.py  blitter.py  block.py  cache.py  cli.py  complex.py  cordic.py  delay.py  delay_line.py  dma_framebuffer.py  dsp.py  dvi.py  dvi_modeline.py  eurorack_pmod.py  eurorack_pmod_peripheral.py  fft.py  flash.py  i2c.py  mac.py  midi.py  palette.py  pixel_plot.py  pixel_plot_backend.py  platform.py  pll.py  psram_peripheral.py  raster.py  raster_persist.py  raster_stroke.py  ringnoc.py  scope.py  sim.py  spectral.py  tiliqua_platform.py  tiliqua_pll.py  tiliqua_soc.py  tmds.py  types.py  usb_host.py  video.py
gateware/src/tiliqua/dsp/: __init__.py  block.py  complex.py  cordic.py  delay.py  delay_effect.py  delay_line.py  effects.py  fft.py  filters.py  mac.py  misc.py  mix.py  oneshot.py  oscillators.py  resample.py  spectral.py  stream_util.py  vca.py
gateware/src/tiliqua/flash/: __init__.py  archive_loader.py  openfpgaloader.py  spiflash_layout.py  spiflash_status.py
gateware/src/tiliqua/periph/: delay_line.py  dtr.py  encoder.py  eurorack_pmod.py  grain_player.py  i2c.py  psram.py
gateware/src/tiliqua/peripherals/: eurorack_pmod.py
gateware/src/tiliqua/platform/: __init__.py  pll.py  types.py
gateware/src/tiliqua/raster/: __init__.py  blit.py  cache.py  line.py  persist.py  plot.py  scope.py  stroke.py
gateware/src/tiliqua/test/: __init__.py  csr.py  psram.py  stream.py  wishbone.py
gateware/src/tiliqua/usb_audio/: __init__.py  audio_to_channels.py  channels_to_usb_stream.py  top.py  usb_stream_to_channels.py  util.py
gateware/src/tiliqua/video/: dvi.py  framebuffer.py  modeline.py  palette.py  tmds.py  types.py
gateware/src/top/beamrace/: sim.cpp  top.py
gateware/src/top/bootloader/: .gitignore  top.py
gateware/src/top/bootloader/fw/: Cargo.toml
gateware/src/top/bootloader/fw/src/: lib.rs  main.rs  options.rs  opts.rs
gateware/src/top/bootstub/: top.py
gateware/src/top/dsp/: bytebeat.v  bytebeat.x  sim_dsp_core.cpp  top.py
gateware/src/top/macro_osc/: top.py
gateware/src/top/macro_osc/fw/: Cargo.toml
gateware/src/top/polysyn/: top.py
gateware/src/top/polysyn/fw/: Cargo.toml
gateware/src/top/sampler/: top.py
gateware/src/top/sampler/fw/: Cargo.toml
gateware/src/top/selftest/: .gitignore  sim.cpp  top.py
gateware/src/top/selftest/fw/: Cargo.toml
gateware/src/top/sid/: top.py
gateware/src/top/sid/fw/: Cargo.toml  build.rs
gateware/src/top/sid/fw/src/: main.rs  (+2 more)
gateware/src/top/usb_audio/: audio_to_channels.py  channels_to_usb_stream.py  top.py  usb_stream_to_channels.py
gateware/src/top/usb_host/: top.py
gateware/src/top/vectorscope_no_soc/: top.py
gateware/src/top/vectorscope_no_soc/sim/: sim.cpp
gateware/src/top/xbeam/: top.py
gateware/src/top/xbeam/fw/: Cargo.toml  build.rs
gateware/tests/: test_cache.py  test_cordic.py  test_delayln.py  test_dsp.py  test_dvi.py  test_fft.py  test_fixed.py  test_flash.py  test_grain_player.py  test_i2c.py  test_i2s.py  test_midi.py  test_raster.py  test_tmds.py  test_usb.py
gateware/webflash/: flash_core.py
(+174 files in other folders)
