[package]
name = "bootinfo_gen"
version = "0.1.0"
edition = "2021"

[dependencies]
tiliqua-lib = { path = "../lib", default-features = false }
tiliqua-manifest = { path = "../manifest" }
tiliqua-hal = { path = "../hal", default-features = false }
clap = { version = "4.0", features = ["derive"] }
serde_json = "1.0"
crc = "3.0"
postcard = { version = "1.1.3", features = ["use-crc"] }

[profile.release]
lto = true
opt-level = 3