[package]
name = "tiliqua-hal"
version = "0.0.0"
categories = ["embedded", "hardware-support", "no-std"]
edition = "2021"
rust-version = "1.68"

[package.metadata.docs.rs]
default-target = "riscv32imac-unknown-none-elf"
targets = [
    "riscv32i-unknown-none-elf",
    "riscv32imac-unknown-none-elf",
]

[lib]
test = true
bench = false

[dependencies]
embedded-hal = "=1.0.0"
embedded-hal-nb = "=1.0.0"
log = { version = "0.4.*", optional = true }
nb = "=1.1.0"
riscv = { version = "=0.11.1", features = ["critical-section-single-hart"] }
embedded-graphics = { git = "https://github.com/vk2seb/embedded-graphics.git", branch = "seb/fast-draw" }
bitflags = "2.6.0"
micromath = "2.1.0"
embedded-storage = "0.3.1"
serde = { version="1.0.219", default-features=false }
serde_derive = "1.0.219"
strum_macros = "0.26.4"
strum = {version = "0.25.0", features = ["derive"], default-features=false}

[dev-dependencies]
critical-section = { version = "1.1.2", features = ["std"] }
env_logger = "0.11.6"
