[package]
name = "tiliqua-lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "tiliqua_lib"
path = "src/lib.rs"

[dependencies]
# Use workspace dependencies
log.workspace = true
heapless.workspace = true
strum_macros.workspace = true
strum.workspace = true
micromath.workspace = true
fixed.workspace = true
midi-types.workspace = true
embedded-hal.workspace = true
serde.workspace = true
serde_derive.workspace = true
postcard.workspace = true
crc.workspace = true

# Local dependencies
tiliqua-hal = { path="../hal", default-features = false }
tiliqua-manifest = { path="../manifest" }
opts = { path="../opts" }

# Additional dependencies for prelude re-exports
fastrand.workspace = true
critical-section.workspace = true
irq.workspace = true

[dev-dependencies]
critical-section = { version = "1.1.2", features = ["std"] }
image = "0.24.7"
env_logger = "0.11.6"

[profile.release]
lto = true
opt-level = 3
