[package]
name = "opts"
version = "0.1.0"
edition = "2021"

[lib]
name = "opts"
path = "src/lib.rs"

[dependencies]
log = "0.4.17"
heapless = "0.8.0"
strum_macros = "0.26.4"
strum = {version = "0.25.0", features = ["derive"], default-features=false}
micromath = "2.1.0"
fixed = "1.28.0"
opts-derive = { path="../opts_derive" }
hash32 = "1.0.0"
postcard = { version="1.1.3", default-features=false }
serde = { version="1.0.219", default-features=false }
serde_derive = "1.0.219"

[dev-dependencies]
critical-section = { version = "1.1.2", features = ["std"] }
env_logger = "0.11.6"

[profile.release]
lto = true
opt-level = 3
