[package]
name = "xbeam-fw"
version = "0.1.0"
edition = "2021"

# Empty workspace table makes this crate standalone (not part of parent workspace)
[workspace]

[dependencies]
# Local crates
xbeam-pac = { path="../pac", default-features = false, features = ["critical-section", "vexriscv"] }
tiliqua-lib.workspace = true
amaranth-soc-isr.workspace = true

# Runtime dependencies
riscv.workspace = true
riscv-rt.workspace = true
panic-halt.workspace = true

# App-specific dependencies
colorsys.workspace = true

[profile.release]
codegen-units = 1
debug = true
debug-assertions = false
incremental = false
lto = true
opt-level = 2
overflow-checks = false
